kubernetes/project-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: project-service
  template:
    metadata:
      labels:
        app: project-service
    spec:
      containers:
        - name: project-service
          image: project-service:latest
          ports:
            - containerPort: 8001
